--- a/templates/hotel/index.html.twig
+++ b/templates/hotel/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hotel index{% endblock %}
+{% block title %} List of Hotel {% endblock %}
 
 {% block body %}
-    <h1>Hotel index</h1>
+    <h1> List of Hotel </h1>
 
     <table class="table">
         <thead>
