--- a/templates/occupied_room/index.html.twig
+++ b/templates/occupied_room/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}OccupiedRoom index{% endblock %}
+{% block title %} List of Occupied Room{% endblock %}
 
 {% block body %}
-    <h1>OccupiedRoom index</h1>
+    <h1> List of Occupied Room </h1>
 
     <table class="table">
         <thead>
