--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reservation index{% endblock %}
+{% block title %}List of Reservation {% endblock %}
 
 {% block body %}
-    <h1>Reservation index</h1>
+    <h1>List of Reservation </h1>
 
     <table class="table">
         <thead>
