--- a/templates/reserved_room/index.html.twig
+++ b/templates/reserved_room/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ReservedRoom index{% endblock %}
+{% block title %}List of Reserved Room {% endblock %}
 
 {% block body %}
-    <h1>ReservedRoom index</h1>
+    <h1>List of Reserved Room </h1>
 
     <table class="table">
         <thead>
