--- a/templates/room/index.html.twig
+++ b/templates/room/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Room index{% endblock %}
+{% block title %}List of Room {% endblock %}
 
 {% block body %}
-    <h1>Room index</h1>
+    <h1>List of Room </h1>
 
     <table class="table">
         <thead>
