--- a/templates/room_type/index.html.twig
+++ b/templates/room_type/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}RoomType index{% endblock %}
+{% block title %}List of Room Type {% endblock %}
 
 {% block body %}
-    <h1>RoomType index</h1>
+    <h1>List of Room Type </h1>
 
     <table class="table">
         <thead>
