--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}List of User {% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+    <h1>List of User </h1>
 
     <table class="table">
         <thead>
